--- a/NewsPaper/templates/posts.html
+++ b/NewsPaper/templates/posts.html
@@ -20,7 +20,7 @@ posts
             {% for post in posts %}
             <tr>
                 <td>{{ post.title }}</td>
-                <td>{{ post.date_of_creation|date:'d.M.y.' }}</td>
+                <td>{{ post.date_of_creation|date:'d.M.Y.' }}</td>
                 <td>{{ post.text|truncatechars:20 }}</td>
             </tr>
             {% endfor %}
