--- a/NewsPaper/news/templates/news/posts_search.html
+++ b/NewsPaper/news/templates/news/posts_search.html
@@ -1,14 +1,22 @@
 {% extends 'news/default.html' %}
 
 {% load custom_filters %}
+{% load custom_tags %}
 
 {% block title %}
 Posts
 {% endblock title %}
 
 {% block content %}
-<h1>All posts</h1>
+<h1>Search in all posts</h1>
 <h3>Posts on current page: {{ posts|length }}</h3>
+
+<hr>
+
+<form action="" method="get">
+    {{ filterset.form.as_p }}
+    <input type="submit" value="Find"/>
+</form>
 
 <div align="center">
     <hr>
@@ -37,46 +45,46 @@ Posts
 
     </table>
     {% else %}
-    <h2>No posts here yet.</h2>
+    <h2>No posts found.</h2>
     {% endif %}
 </div>
 
 <hr>
 
 {% if page_obj.has_previous %}
-<a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+<a href="?{% url_replace page=page_obj.previous_page_number %}">Previous</a>
 {% endif %}
 
 {% if page_obj.has_previous %}
-<a href="?page=1">1</a>
+<a href="?{% url_replace page=1 %}">1</a>
 {% if page_obj.previous_page_number != 1 %}
 ...
-<a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+<a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
 {% endif %}
 {% endif %}
 
 {{ page_obj.number }}
 
 {% if page_obj.has_next %}
-<a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+<a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
 {% if paginator.num_pages != page_obj.next_page_number %}
 ...
-<a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+<a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
 {% endif %}
 {% endif %}
 
 {% if page_obj.has_next %}
-<a href="?page={{ page_obj.next_page_number }}">Next</a>
+<a href="?{% url_replace page=page_obj.next_page_number %}">Next</a>
 {% endif %}
 
 <br>
 
 {% if page_obj.has_previous %}
-<a href="?page=1">First</a>
+<a href="?{% url_replace page=1 %}">First</a>
 {% endif %}
 
 {% if page_obj.has_next %}
-<a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+<a href="?{% url_replace page=page_obj.paginator.num_pages %}">Last</a>
 {% endif %}
 
 {% endblock content %}
